Set z-index to project-card's card-bottom class to 5 such that the project title remains above the project image during transformation and prevent img from leaking over it

--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,7 @@ section {
   background-color: rgb(80, 80, 80);
   color: rgb(240, 240, 240);
   font-size: clamp(16px, 20px, 24px);
+  z-index: 5;
  }
 
 .project-card:hover {
@@ -285,6 +286,7 @@ section {
 
 .project-card:hover img {
   filter: blur(10px);
+  transform: scale(1.05);
   transition: var(--super-short-transition);
 }
 
